# dlfb

./: .gitignore  README.md  pyproject.toml
requirements/: base.txt  base_windows.txt  cancer.txt  constraints.txt  gpu.txt  graphs.txt  localization.txt  proteins.txt
src/dlfb/: __init__.py  compatibility.py  log.py  provision.py
src/dlfb/cancer/: inspect.py  utils.py
src/dlfb/cancer/dataset/: __init__.py  builder.py  preprocessors.py
src/dlfb/cancer/model/: __init__.py  cnn.py  resnet.py
src/dlfb/cancer/train/: __init__.py
src/dlfb/cancer/train/handlers/: __init__.py  augmentors.py  samplers.py
src/dlfb/dna/: dataset.py  inspect.py  model.py  train.py  utils.py
src/dlfb/graphs/: inspect.py  model.py  train.py
src/dlfb/graphs/dataset/: __init__.py  builder.py  pairs.py
src/dlfb/localization/: constants.py  model.py  train.py  utils.py
src/dlfb/localization/dataset/: __init__.py  builder.py  loaders.py  utils.py
src/dlfb/localization/inspect/: metrics.py  reconstruction.py  utils.py
src/dlfb/localization/inspect/embeddings/: clustering.py  feature_spectrum.py  utils.py
src/dlfb/metrics/: __init__.py  f1.py  precision.py  recall.py
src/dlfb/proteins/: dataset.py  inspect.py  model.py  train.py  utils.py
src/dlfb/utils/: __init__.py  config.py  context.py  display.py  metric_plots.py  metrics_logger.py  restore.py
